# cacau

./: Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
ast/: Cargo.toml
ast/src/: lib.rs
cacau/: Cargo.toml
cacau/src/: main.rs
cacau/tests/: assignment.rs  hello_world.rs  logic.rs  unary.rs  variable_decl.rs
parser/: Cargo.toml
parser/src/: ast.rs  grammar.pest  lib.rs  reflect.rs
parser_lalrpop/: Cargo.toml  build.rs
parser_lalrpop/src/: cacau.lalrpop  lib.rs
runner/: Cargo.toml
runner/src/: ast.rs  lib.rs  mem.rs  runner.rs
runner/tests/: assignments.rs  comparisons.rs  hello.rs
tests/: 00_hello_world.cau  01_assignments.cau  02_comparisons.cau  03_arithmetic.cau  04_conversions.cau  05_precedence.cau  06_logical_operators.cau  07_mutability.cau  08_if_elif_else.cau  09_expressions.cau  10.2_recursive_functions.cau  11_lambda_functions.cau  12_bitwise.cau  13_list.cau  14_structs.cau  23_tuples.cau  README.md
