[package]
name = "cacau"
authors = ["Vinícius Rodrigues Miguel <vrmiguel99@gmail.com>", "João M. Bezerra <marcospb19@hotmail.com>"]
readme = "README.md"
repository = "https://github.com/cacau-lang/cacau"
license = "MIT"
version = "0.1.0"
edition = "2021"

# For LALRPOP preprocessing
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.5.4"
lalrpop-util = "0.19.6"

[build-dependencies]
lalrpop = "0.19.6"