[package]
name = "parser"
authors = [
    "Vinícius Rodrigues Miguel <vrmiguel99@gmail.com>",
    "João M. Bezerra <marcospb19@hotmail.com>",
]
readme = "README.md"
repository = "https://github.com/cacau-lang/cacau"
license = "MIT"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pest = "2.1.3"
pest_derive = "2.1.0"
pest-ast = "0.3"
from-pest = "0.3"
lazy_static = "1.4.0"
